language/move-compiler/tests/move_check/borrows/borrow_static_invalid.exp
error[E04020]: missing acquires annotation
   ┌─ tests/move_check/borrows/borrow_static_invalid.move:16:17
   │
 4 │     fun direct_static_borrow(addr: address): &R acquires R {
   │                                                          - The call acquires '0x8675309::M::R', but the 'acquires' list for the current function does not contain this type. It must be present in the calling context's acquires list
   ·
16 │         let r = direct_static_borrow(@0x42);
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x8675309::M::direct_static_borrow'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_static_invalid.move:24:19
   │
23 │         let r = direct_static_borrow(@0x42);
   │                 --------------------------- It is still being borrowed by this reference
24 │         let _r2 = borrow_global_mut<R>(@0x42);
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'

